--- a/style.css
+++ b/style.css
@@ -1,7 +1,37 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 h1 {
-    color: antiquewhite;
-    background-color: black;
-    font-size: 20px;
+    color: #68279b;
+    font-size: 2.5rem;
+    font-weight: 700;
+    font-style: oblique;
+    text-decoration: underline;
+    text-transform: uppercase;
+    text-align: center;
+    margin: 30px 0 10px 0;
+}
+
+h2 {
+    color: #6184d8;
+    font-size: 1.5rem;
     font-weight: 500;
     font-style: italic;
+    text-align: center;
+    margin: 10px 0 30px 0;
+}
+
+.bg {
+    width: 100%;
+    height: 500px;
+    background-image: url("https://images.unsplash.com/photo-1722755417793-6924c6b5ba93?q=80&w=2127&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+p {
+    font-size: 18px;
 }
