--- a/style.css
+++ b/style.css
@@ -1,11 +1,15 @@
+:root {
+    font-size: 62.5%;
+}
+
 * {
     margin: 0;
     padding: 0;
 }
 
 h1 {
-    color: #68279b;
-    font-size: 2.5rem;
+    color: #8a2be2;
+    font-size: 3.2rem;
     font-weight: 700;
     font-style: oblique;
     text-decoration: underline;
@@ -15,8 +19,8 @@ h1 {
 }
 
 h2 {
-    color: #6184d8;
-    font-size: 1.5rem;
+    color: #8888c9;
+    font-size: 2.4rem;
     font-weight: 500;
     font-style: italic;
     text-align: center;
@@ -24,8 +28,8 @@ h2 {
 }
 
 .bg {
-    width: 100%;
-    height: 500px;
+    width: 100vw;
+    height: 50vh;
     background-image: url("https://images.unsplash.com/photo-1722755417793-6924c6b5ba93?q=80&w=2127&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
     background-size: cover;
     background-repeat: no-repeat;
@@ -33,5 +37,20 @@ h2 {
 }
 
 p {
-    font-size: 18px;
+    font-size: 1.8rem;
+    margin: 15px 0;
+}
+
+a {
+    text-decoration: none;
+    font-size: 1.8rem;
+    color: #8a2be2;
+}
+
+a:visited {
+    color: #8888c9;
+}
+
+a:hover {
+    text-decoration: underline;
 }
